# rats-tls

./: CMakeLists.txt  build-occlum-client.sh  build-occlum-server.sh  build.sh  run-host-client.sh  run-host-server.sh  run-server.sh
cmake/: CompilerOptions.cmake  Librats.cmake
samples/rats-tls-client/: CMakeLists.txt  client.c
samples/rats-tls-server/: CMakeLists.txt  server.c
samples/sgx-stub-enclave/: CMakeLists.txt  sgx_stub.edl  sgx_stub_ecall.c
src/: CMakeLists.txt
src/api/: rats_tls_callback.c  rats_tls_cleanup.c  rats_tls_init.c  rats_tls_negotiate.c  rats_tls_receive.c  rats_tls_transmit.c
src/attesters/: CMakeLists.txt
src/attesters/api/: enclave_attester_register.c
src/attesters/csv/: cleanup.c  collect_evidence.c  csv_utils.c  csv_utils.h  init.c  main.c  pre_init.c
src/attesters/internal/: enclave_attester.c  rtls_enclave_attester_load_all.c  rtls_enclave_attester_load_single.c  rtls_enclave_attester_select.c
src/attesters/nullattester/: cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c
src/attesters/sev/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c  sev.h
src/attesters/sev-snp/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c  sev_snp.h
src/attesters/sgx-ecdsa/: CMakeLists.txt  cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c  quote_generation.h
src/attesters/sgx-la/: CMakeLists.txt  cleanup.c  collect_evidence.c  init.c  main.c  pre_init.c
src/attesters/tdx-ecdsa/: cleanup.c  collect_endorsements.c  collect_evidence.c  init.c  main.c  pre_init.c
src/core/: claim.c  dice.c  endorsement.c  main.c  rtls_common.c  rtls_core_generate_certificate.c
src/crypto_wrappers/: CMakeLists.txt
src/crypto_wrappers/api/: crypto_wrapper_register.c
src/crypto_wrappers/internal/: crypto_wrapper.c  rtls_crypto_wrapper_load_all.c  rtls_crypto_wrapper_load_single.c  rtls_crypto_wrapper_select.c
src/crypto_wrappers/nullcrypto/: cleanup.c  gen_cert.c  gen_hash.c  gen_privkey.c  gen_pubkey_hash.c  init.c  main.c  pre_init.c
src/crypto_wrappers/openssl/: cleanup.c  gen_cert.c  gen_hash.c  gen_privkey.c  gen_pubkey_hash.c  init.c  main.c  pre_init.c
src/include/edl/: rtls_syscalls.h  sgx_ecdsa.edl  sgx_la.edl
src/include/internal/: attester.h  core.h  crypto_wrapper.h  dice.h  verifier.h
src/include/rats-tls/: api.h  cert.h  claim.h  crypto_wrapper.h  endorsement.h  err.h  hash.h  log.h  tls_wrapper.h  verifier.h
src/sgx/trust/: rtls_syscalls.c
src/sgx/untrust/: CMakeLists.txt  rtls_syscalls_ocall.c  sgx_ecdsa_ocall.c  sgx_la_ocall.c
src/tls_wrappers/api/: tls_wrapper_verify_certificate_extension.c
src/tls_wrappers/internal/: rtls_tls_wrapper_select.c
src/tls_wrappers/nulltls/: CMakeLists.txt
src/tls_wrappers/openssl/: main.c  negotiate.c  receive.c  transmit.c  un_negotiate.c  use_cert.c  use_privkey.c
src/verifiers/: CMakeLists.txt
src/verifiers/api/: enclave_verifier_register.c
src/verifiers/csv/: cleanup.c  hygoncert.c  init.c  main.c  pre_init.c  verify_evidence.c
src/verifiers/internal/: enclave_verifier.c  rtls_enclave_verifier_load_all.c  rtls_enclave_verifier_load_single.c  rtls_enclave_verifier_select.c
src/verifiers/nullverifier/: cleanup.c  init.c  main.c  pre_init.c  verify_evidence.c
src/verifiers/sev/: amdcert.c  amdcert.h  cleanup.c  init.c  main.c  pre_init.c  sevcert.c  sevcert.h  verify_evidence.c
src/verifiers/sev-snp/: cleanup.c  init.c  main.c  pre_init.c  verify_evidence.c
src/verifiers/sgx-ecdsa/: cleanup.c  init.c  main.c  pre_init.c  quote_verification.h  verify_evidence.c
src/verifiers/sgx-ecdsa-qve/: init.c  main.c  pre_init.c  verify_evidence.c
src/verifiers/sgx-la/: init.c  main.c  pre_init.c  verify_evidence.c
src/verifiers/tdx-ecdsa/: verify_evidence.c
